# aidoc-flow-framework

./: .gitignore  AI_Coding_Tools_Comparison.md  COST_ANALYSIS.md  Dockerfile  FEATURE_ID_AUDIT_REPORT.md  Gemini_CLI_Large_File_Workarounds.md  MULTI_PROJECT_QUICK_REFERENCE.md  MULTI_PROJECT_SETUP_GUIDE.md  Makefile  README.md  TESTING_STRATEGY_TDD.md  TRADING_NEXUS_SPECIFICATION.md  ai_dev_flow_executive_summary.html  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  update_schema_references.py  update_schemas_dual_format.py  validate_documentation_consistency.py
.aidev/: README.md  SESSION_HANDOFF.md
.clinerules/: doc-flow.md
ai_dev_flow/: .autopilot.yaml  AI_ASSISTANT_PLAYBOOK.md  AI_ASSISTANT_RULES.md  AI_TOOL_OPTIMIZATION_GUIDE.md  AI_VALIDATION_DECISION_GUIDE.md  CHANGE_MANAGEMENT_GUIDE.md  COMPLETE_TAGGING_EXAMPLE.md  CONTRACT_DECISION_QUESTIONNAIRE.md  CUMULATIVE_TAG_REFERENCE.md  DEVELOPMENT_PLAN_TEMPLATE.md  DIAGRAM_STANDARDS.md  DOCUMENT_SPLITTING_RULES.md  DOMAIN_ADAPTATION_GUIDE.md  DOMAIN_SELECTION_QUESTIONNAIRE.md  DUAL_MVP_TEMPLATES_ARCHITECTURE.md  FINANCIAL_DOMAIN_CONFIG.md  GENERIC_DOMAIN_CONFIG.md  ID_NAMING_STANDARDS.md  ID_NAMING_STANDARDS.md.bak.1766357832  LAYER_EVOLUTION.md  LAYER_REGISTRY.yaml  MATRIX_TEMPLATE_COMPLETION_GUIDE.md  METADATA_QUICK_REFERENCE.md  METADATA_TAGGING_GUIDE.md  METADATA_VS_TRACEABILITY.md  MVP_AUTOMATION_DESIGN.md  MVP_AUTOPILOT.md  MVP_GITHUB_CICD_INTEGRATION_PLAN.md  MVP_PIPELINE_END_TO_END_USER_GUIDE.md  MVP_WORKFLOW_GUIDE.md  PLATFORM_VS_FEATURE_BRD.md  PROJECT_KICKOFF_TASKS.md  PROJECT_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  REF-TEMPLATE.md  SCHEMA_TEMPLATE_GUIDE.md  SDD_AUTOMATION_WORKFLOW.md  SOFTWARE_DOMAIN_CONFIG.md  SPEC_DRIVEN_DEVELOPMENT_GUIDE.md  (+18 more)
ai_dev_flow_backup_20251105_183749/: ID_NAMING_STANDARDS.md  README.md  SPEC_DRIVEN_DEVELOPMENT_GUIDE.md  TRACEABILITY.md  WHEN_TO_CREATE_IMPL.md  WORKFLOW_FIXES_PHASE1_COMPLETE.md  index.md
ai_dev_flow_backup_20251107_135123/: AI_ASSISTANT_RULES.md  CONTRACT_DECISION_QUESTIONNAIRE.md  DOMAIN_ADAPTATION_GUIDE.md  DOMAIN_SELECTION_QUESTIONNAIRE.md  FINANCIAL_DOMAIN_CONFIG.md  GENERIC_DOMAIN_CONFIG.md  ID_NAMING_STANDARDS.md  PROJECT_KICKOFF_TASKS.md  PROJECT_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  SOFTWARE_DOMAIN_CONFIG.md  SPEC_DRIVEN_DEVELOPMENT_GUIDE.md  TOOL_OPTIMIZATION_GUIDE.md  TRACEABILITY.md  TRACEABILITY_MATRIX_COMPLETE-TEMPLATE.md  TRACEABILITY_MATRIX_IMPLEMENTATION_SUMMARY.md  TRACEABILITY_SETUP.md  WHEN_TO_CREATE_IMPL.md  index.md
archive/: AUTOPILOT_TDD_INTEGRATION_GUIDE.md  FEATURE_ID_AUDIT_REPORT_deprecated.md
dev_tools/: README.md
dev_tools/a2a/: README.md  pyproject.toml  requirements.txt  scenarios.yaml  server.py  verify_a2a.py
scripts/: archive_test_results.py  bulk_add_metadata.sh  compare_test_results.py  fix_matrix_numbering.py  generate_coverage_report.py  run_tests.py  setup_project_hybrid.sh  skills_compliance_report.py  (+20 more)
(+1413 files in other folders)
