# AI Dev Flow Framework Configuration
# Reference: ai_dev_flow/10_TSPEC/

[project]
name = "ai-dev-flow"
version = "1.0.0"
description = "AI-Driven Specification-Driven Development Framework"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "utest: Unit tests (fast, isolated)",
    "itest: Integration tests (requires services)",
    "stest: Smoke tests (deployment health)",
    "ftest: Functional tests (end-to-end)",
    "slow: Tests that take >5 seconds",
    "requires_db: Tests requiring database",
    "requires_api: Tests requiring external API",
]
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "raise AssertionError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true
precision = 1

[tool.coverage.html]
directory = "tests/coverage_html"

[tool.coverage.json]
output = "tests/results/coverage.json"
pretty_print = true

[tool.coverage.xml]
output = "tests/results/coverage.xml"

# Ruff configuration (if using ruff for linting)
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["src"]

# Black configuration (if using black for formatting)
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]
